fix: blockquote border inside li tag in dark mode

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -331,6 +331,10 @@ $navbar-dark-active-color:          $link-color-dark;
   border-left: 3px solid $border-dark;
 }
 
+[data-dark-mode] li > blockquote {
+  border-left: none;
+}
+
 [data-dark-mode] body .footer {
   border-top: 1px solid $border-dark;
 }
